bar transitioning working/no axis

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       body {
         font-family: 'Roboto Mono', helvetica;
       }
+
+      .bar:hover {
+        fill: #ADA36B;
+      }
+
+      #content {
+        color: #fff;
+      }
     </style>
   </head>
   <body>
