switch to material ui table

--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Examples</title>
     <link rel='stylesheet' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:700' rel='stylesheet' type='text/css'>    <style>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:700' rel='stylesheet' type='text/css'>    
+    <style>
       body {
+        color: #fff;
         font-family: 'Roboto Mono', helvetica;
       }
 
       .bar:hover {
-        fill: #ADA36B;
-      }
-
-      #content {
-        color: #fff;
+        fill: rgba(255, 255, 255, 0.298039);
       }
     </style>
   </head>
