add styles for tabs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       body {
         color: #fff;
         font-family: 'Roboto Mono', helvetica;
+        background-color: rgb(48, 48, 48);
       }
 
       .bar:hover {
