change body background and bar hover styles

--- a/examples/barChartExample/index.html
+++ b/examples/barChartExample/index.html
@@ -9,12 +9,13 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:700' rel='stylesheet' type='text/css'>    
     <style>
       body {
+        background-color: rgb(48, 48, 48);
         color: #fff;
         font-family: 'Roboto Mono', helvetica;
       }
 
       .bar:hover {
-        fill: rgba(255, 255, 255, 0.298039);
+        fill: rgba(255, 255, 255, 0.3);
       }
     </style>
   </head>
