--- a/examples/barChartExample/index.html
+++ b/examples/barChartExample/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Examples</title>
-    <link rel='stylesheet' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='src/css/bootstrap.grid.css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:700' rel='stylesheet' type='text/css'>    
     <style>
       body {
