--- a/examples/barChartExample/index.html
+++ b/examples/barChartExample/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Examples</title>
+    <title>React Chart Transitions</title>
     <link rel='stylesheet' href='src/css/bootstrap.grid.css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:700' rel='stylesheet' type='text/css'>    
     <style>
