remove roboto font

--- a/examples/barChartExample/index.html
+++ b/examples/barChartExample/index.html
@@ -6,12 +6,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>React Chart Transitions</title>
     <link rel='stylesheet' href='src/css/bootstrap.grid.css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:700' rel='stylesheet' type='text/css'>    
     <style>
       body {
         background-color: rgb(48, 48, 48);
         color: #fff;
-        font-family: 'Roboto Mono', helvetica;
+        font-family: Arial, Helvetica, sans-serif;
       }
 
       .bar:hover {
