--- a/examples/alphabetExample/index.html
+++ b/examples/alphabetExample/index.html
@@ -13,8 +13,8 @@
         font-family: Arial, Helvetica, sans-serif;
       }
 
-      .bar:hover {
-        fill: rgba(255, 255, 255, 0.3);
+      text {
+        font: bold 48px monospace;
       }
     </style>
   </head>
