--- a/examples/streamGraphExample/index.html
+++ b/examples/streamGraphExample/index.html
@@ -13,8 +13,8 @@
         font-family: Arial, Helvetica, sans-serif;
       }
 
-      .bar:hover {
-        fill: rgba(255, 255, 255, 0.3);
+      .node-path:hover {
+        fill: rgba(255, 0, 0, 0.6);
       }
     </style>
   </head>
