--- a/examples/alphabetExample/index.html
+++ b/examples/alphabetExample/index.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='src/css/bootstrap.grid.css'>
     <style>
       body {
+        margin: 0px 20px;
         background-color: rgb(48, 48, 48);
         color: #fff;
         font-family: Arial, Helvetica, sans-serif;
